--- a/_juegos/2016-10-07-beerpong.markdown
+++ b/_juegos/2016-10-07-beerpong.markdown
@@ -70,7 +70,7 @@ Entonces, se empieza a jugar. Primero tirarán los dos del equipo 1 y después l
 
 #### LIGAS
 
-Todos los miércoles en [La Antigua](uaparty.ml/bares/La_Antigua) puedes participar en un torneo por 3 euros(incluye barra libre de cerveza y sangría de 22:00 a 00:00) inscribiéndote antes de las 00:00 con tu pareja.
+Todos los miércoles en [La Antigua](../../bares/La_Antigua) puedes participar en un torneo por 3 euros(incluye barra libre de cerveza y sangría de 22:00 a 00:00) inscribiéndote antes de las 00:00 con tu pareja.
 
 *******************************************************************
 
