Updated cocktail page with faster loading smaller photos

--- a/_cocktails/2016-10-4-gimlet.markdown
+++ b/_cocktails/2016-10-4-gimlet.markdown
@@ -3,6 +3,7 @@ layout: cocktail
 title:  "Gimlet"
 categories: [cóctel, simple, ginebra]
 imageURL: "http://i.imgur.com/Of8hTz1.jpg"
+mini_imageURL: "http://i.imgur.com/V9YMcHG.jpg"
 author: "Antonio Carmona"
 ---
 
