--- a/_cocktails/2016-10-4-mai_tai.markdown
+++ b/_cocktails/2016-10-4-mai_tai.markdown
@@ -3,6 +3,7 @@ layout: cocktail
 title:  "Mai Tai"
 categories: [cóctel, simple, ron]
 imageURL: "http://i.imgur.com/PrN6m05.jpg"
+mini_imageURL: "http://i.imgur.com/Di10QVb.jpg"
 author: "Jose Martinez Lopez"
 ---
 
