--- a/_juegos/2016-10-07-beerpong.markdown
+++ b/_juegos/2016-10-07-beerpong.markdown
@@ -3,6 +3,7 @@ layout: cocktail
 title:  "Beerpong"
 category: [beber, juego, alcohol, pelota, cerveza,la antigua]
 imageURL: "http://i.imgur.com/rycK3bO.jpg"
+mini_imageURL: "http://i.imgur.com/W26Lz7V.jpg"
 author: "Juan Gutierrez Pomte"
 ---
 
